@@ -489,6 +489,9 @@
           <!--encoding>UTF-8</encoding--> <!-- The -encoding argument for the Java compiler. -->
           <!--fork>${fork.javac}</fork--> 
           <maxmem>${javac.maxHeapSize}</maxmem>
+          <compilerArgs>
+			<arg>-XX:MaxPermSize=256m</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <!-- ======================================================= -->
